blender, sdk requirements

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -5,10 +5,11 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt update -y
 RUN apt install -y \
-    git git-lfs subversion kmod sudo wget imagemagick p7zip-full openjdk-11-jre
+    git git-lfs subversion kmod sudo wget imagemagick ffmpeg p7zip-full openjdk-11-jre
 RUN apt install -y \
-    build-essential bison cmake patchelf cxxtest gettext linux-libc-dev libusb-1.0-0-dev \
-    libcap2-bin libffi-dev libssl-dev libxi6 uuid-dev
+    build-essential bison cmake python3-pip patchelf cxxtest gettext \
+    linux-libc-dev libusb-1.0-0-dev \
+    libcap2-bin libffi-dev libssl-dev libxi6 uuid-dev libreadline-dev
 RUN apt install -y \
     mingw-w64 mingw-w64-tools mingw-w64-x86-64-dev \
     g++-mingw-w64 libz-mingw-w64-dev
@@ -19,5 +20,6 @@ RUN apt clean && \
     ln -sf /usr/share/zoneinfo/UTC /etc/localtime && \
     echo UTC > /etc/timezone && \
     ln -sf /home /var/home
+RUN pip3 install jenkins_job_builder==5.0.4
 RUN wget -q -O /opt/jenkins.war https://get.jenkins.io/war/2.413/jenkins.war
 COPY ./run-jenkins /usr/local/bin/run-jenkins
