--- a/jenkins-jobs/sdk.yml
+++ b/jenkins-jobs/sdk.yml
@@ -15,6 +15,14 @@
             JENKINS_WS=${{JENKINS_HOME}}/workspace
             PIP="${{DESTDIR}}/bin/python{python_version} -m pip"
 
+            if [ ! -d sdk ]; then
+                git clone https://github.com/kitsune-ONE-team/KITSUNETSUKI-SDK.git sdk
+            else
+                cd sdk
+                git pull
+                cd ..
+            fi
+
             if [ ! -f discord.zip ]; then
                 wget -O discord.zip https://dl-game-sdk.discordapp.net/3.2.1/discord_game_sdk.zip
                 7z x -odiscord discord.zip
@@ -38,16 +46,7 @@
             cp -Rfv discord/c/*                                                                ${{DESTDIR}}/include/
             cp -fv discord/lib/x86_64/discord_game_sdk.so                                      ${{DESTDIR}}/lib/libdiscord_game_sdk.so
 
-            ${{PIP}} install --no-input --no-color cython==0.29.36
-            ${{PIP}} install --no-input --no-color httplib2==0.20.2
-            ${{PIP}} install --no-input --no-color jinja2==3.1.2
-            ${{PIP}} install --no-input --no-color jsonschema==3.2.0
-            ${{PIP}} install --no-input --no-color numpy==1.25.1
-            ${{PIP}} install --no-input --no-color nvidia-ml-py==11.515.0
-            ${{PIP}} install --no-input --no-color oauth2==1.9.0.post1
-            ${{PIP}} install --no-input --no-color py-ubjson==0.16.1
-            ${{PIP}} install --no-input --no-color git+https://github.com/kitsune-ONE-team/panda3d-gltf.git@948d0e9fa16423ccbd902b904b9139d1f825a0fb
-            ${{PIP}} install --no-input --no-color git+https://github.com/kitsune-ONE-team/KITSUNETSUKI-Asset-Tools.git@d3301a7a4a826f7c2225ccf204b7b32eb719b49b
+            PYTHONHOME=$(pwd)/${{DESTDIR}} ${{PIP}} install -r sdk/sdk/requirements.txt
 
 - job-template:
     name: sdk-winx64
@@ -67,6 +66,14 @@
             set PIP=%DESTDIR%\bin\python -m pip
             set ZIP=D:\7-Zip\7z
             set PATH=%PATH%;D:\Git\bin
+
+            if not exist sdk (
+                %GIT% clone https://github.com/kitsune-ONE-team/KITSUNETSUKI-SDK.git sdk
+            ) else (
+                cd sdk
+                %GIT% pull
+                cd ..
+            )
 
             if not exist discord.zip (
                 curl -o discord.zip https://dl-game-sdk.discordapp.net/3.2.1/discord_game_sdk.zip
@@ -95,16 +102,8 @@
             xcopy /I /E /Y discord\c                                                    %DESTDIR%\include
             copy /V /Y     discord\lib\x86_64\*.dll                                     %DESTDIR%\lib
 
-            %PIP% install --no-input --no-color cython==0.29.36
-            %PIP% install --no-input --no-color httplib2==0.20.2
-            %PIP% install --no-input --no-color jinja2==3.1.2
-            %PIP% install --no-input --no-color jsonschema==3.2.0
-            %PIP% install --no-input --no-color numpy==1.25.1
-            %PIP% install --no-input --no-color nvidia-ml-py==11.515.0
-            %PIP% install --no-input --no-color oauth2==1.9.0.post1
-            %PIP% install --no-input --no-color py-ubjson==0.16.1
-            %PIP% install --no-input --no-color git+https://github.com/kitsune-ONE-team/panda3d-gltf.git@948d0e9fa16423ccbd902b904b9139d1f825a0fb
-            %PIP% install --no-input --no-color git+https://github.com/kitsune-ONE-team/KITSUNETSUKI-Asset-Tools.git@d3301a7a4a826f7c2225ccf204b7b32eb719b49b
+            set PYTHONHOME=%cd%\%DESTDIR%
+            %PIP% install -r sdk\sdk\requirements.txt
 
 - project:
     name: sdk-lynx64
