--- a/jenkins-jobs/blender.yml
+++ b/jenkins-jobs/blender.yml
@@ -89,9 +89,10 @@
             call "C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\VC\Auxiliary\Build\vcvarsall.bat" amd64 10.0.20348.0
             @echo on
 
-            set PYTHON=D:\Jenkins\workspace\blender-thirdparty-winx64\python\311\bin\python
-            set GIT=D:\Git\bin\git.exe
-            set SVN=D:\Svn\bin\svn.exe
+            set JENKINS_WS=%HOME%\Jenkins\Jenkins\workspace
+            set PYTHON=%JENKINS_WS%\blender-thirdparty-winx64\python\311\bin\python
+            set GIT=Z:\Git\bin\git.exe
+            set SVN=Z:\Svn\bin\svn.exe
             %PYTHON% -B build_files\utils\make_update.py --git-command "%GIT%" --svn-command "%SVN%" --no-libraries
 
             if not exist build (
@@ -102,7 +103,7 @@
                 -DCMAKE_BUILD_TYPE=Release ^
                 -DCMAKE_INSTALL_PREFIX=\blender\lib\site-packages ^
                 -DMULTITHREADED_BUILD=16 ^
-                -DLIBDIR=D:/Jenkins/workspace/blender-thirdparty-winx64 ^
+                -DLIBDIR=%JENKINS_WS%/blender-thirdparty-winx64 ^
                 -DWITH_AUDASPACE=ON ^
                 -DWITH_CODEC_AVI=ON ^
                 -DWITH_CODEC_FFMPEG=ON ^
