--- a/container/docker-compose.yml
+++ b/container/docker-compose.yml
@@ -2,11 +2,19 @@ version: '3.4'
 
 services:
   builder:
-    image: docker.io/yonnji/sdk
+    build:
+      context: .
     ports:
       - 8080:8080
     volumes:
-      - ./jenkins:/root/jenkins:z
+      - ../jenkins:/root/jenkins:z
       - ../jenkins-jobs:/root/jenkins-jobs:z
       - ~/.config/jenkins_jobs/:/root/.config/jenkins_jobs:z
-    command: run-jenkins
+      - ~/Dev/Panda3D:/root/Dev/Panda3D:z
+    environment:
+      JENKINS_HOME: /root/jenkins
+    command: >
+      java -jar /opt/jenkins.war
+      --httpPort=8080
+      --logfile=/var/log/jenkins.log
+      --debug=1
