--- a/jenkins-jobs/pipeline.yml
+++ b/jenkins-jobs/pipeline.yml
@@ -111,17 +111,39 @@
       pipeline {{
           agent any
           stages {{
-              stage('dist-clean')      {{ build job: 'dist-clean-lynx64' }}
-              stage('bullet')          {{ build job: 'bullet-lynx64' }}
-              stage('ogg')             {{ build job: 'ogg-lynx64' }}
-              stage('vorbis')          {{ build job: 'vorbis-lynx64' }}
-              stage('sdl')             {{ build job: 'sdl-lynx64' }}
-              stage('python')          {{ build job: 'python-lynx64' }}
-              stage('blender')         {{ build job: 'blender-lynx64' }}
-              stage('panda3d')         {{ build job: 'panda3d-lynx64' }}
-              stage('panda3d-kphys')   {{ build job: 'panda3d-kphys-lynx64' }}
-              stage('panda3d-krender') {{ build job: 'panda3d-krender-lynx64' }}
-              stage('sdk')             {{ build job: 'sdk-lynx64' }}
+              stage('dist-clean') {{
+                  steps {{ build job: 'dist-clean-lynx64' }}
+              }}
+              stage('bullet') {{
+                  steps {{ build job: 'bullet-lynx64' }}
+              }}
+              stage('ogg') {{
+                  steps {{ build job: 'ogg-lynx64' }}
+              }}
+              stage('vorbis') {{
+                  steps {{ build job: 'vorbis-lynx64' }}
+              }}
+              stage('sdl') {{
+                  steps {{ build job: 'sdl-lynx64' }}
+              }}
+              stage('python') {{
+                  steps {{ build job: 'python-lynx64' }}
+              }}
+              stage('blender') {{
+                  steps {{ build job: 'blender-lynx64' }}
+              }}
+              stage('panda3d') {{
+                  steps {{ build job: 'panda3d-lynx64' }}
+              }}
+              stage('panda3d-kphys') {{
+                  steps {{ build job: 'panda3d-kphys-lynx64' }}
+              }}
+              stage('panda3d-krender') {{
+                  steps {{ build job: 'panda3d-krender-lynx64' }}
+              }}
+              stage('sdk') {{
+                  steps {{ build job: 'sdk-lynx64' }}
+              }}
           }}
       }}
 
@@ -140,13 +162,28 @@
       pipeline {{
           agent any
           stages {{
-              stage('dist-clean')      {{ build job: 'dist-clean-winx64' }}
-              stage('bullet')          {{ build job: 'bullet-winx64' }}
-              stage('sdl')             {{ build job: 'sdl-winx64' }}
-              stage('python')          {{ build job: 'python-winx64' }}
-              stage('panda3d')         {{ build job: 'panda3d-winx64' }}
-              stage('panda3d-kphys')   {{ build job: 'panda3d-kphys-winx64' }}
-              stage('panda3d-krender') {{ build job: 'panda3d-krender-winx64' }}
-              stage('sdk')             {{ build job: 'sdk-winx64' }}
+              stage('dist-clean') {{
+                  steps {{ build job: 'dist-clean-winx64' }}
+              stage('bullet') {{
+                  steps {{ build job: 'bullet-winx64' }}
+              }}
+              stage('sdl') {{
+                  steps {{ build job: 'sdl-winx64' }}
+              }}
+              stage('python') {{
+                  steps {{ build job: 'python-winx64' }}
+              }}
+              stage('panda3d') {{
+                  steps {{ build job: 'panda3d-winx64' }}
+              }}
+              stage('panda3d-kphys') {{
+                  steps {{ build job: 'panda3d-kphys-winx64' }}
+              }}
+              stage('panda3d-krender') {{
+                  steps {{ build job: 'panda3d-krender-winx64' }}
+              }}
+              stage('sdk') {{
+                  steps {{ build job: 'sdk-winx64' }}
+              }}
           }}
       }}
