--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/library/ubuntu:22.04
+FROM docker.io/library/ubuntu:24.04
 
 # skips timezone settings
 ENV DEBIAN_FRONTEND=noninteractive
@@ -7,7 +7,7 @@ RUN apt update -y
 RUN apt install -y \
     git git-lfs subversion kmod sudo wget imagemagick ffmpeg p7zip-full openjdk-21-jre
 RUN apt install -y \
-    build-essential bison cmake python3-pip patchelf cxxtest gettext \
+    build-essential bison cmake python3-pip python3-venv patchelf cxxtest gettext \
     linux-libc-dev libusb-1.0-0-dev \
     libcap2-bin libffi-dev libssl-dev libxi6 uuid-dev libreadline-dev
 RUN apt install -y \
@@ -20,6 +20,8 @@ RUN apt clean && \
     ln -sf /usr/share/zoneinfo/UTC /etc/localtime && \
     echo UTC > /etc/timezone && \
     ln -sf /home /var/home
-RUN pip3 install jenkins_job_builder==6.3.0
+RUN python3 -m venv /root/.venv
+COPY requirements.txt /root/requirements.txt
+RUN /root/.venv/bin/pip install -r /root/requirements.txt
 RUN wget -q -O /opt/jenkins.war https://updates.jenkins.io/download/war/2.459/jenkins.war
 WORKDIR /root
