--- a/sdk/requirements.txt
+++ b/sdk/requirements.txt
@@ -3,7 +3,7 @@ cython==3.0.10
 httplib2==0.20.2
 jinja2==3.1.4
 jsonschema==3.2.0
-numpy==1.26.4
+# numpy==1.26.4
 nvidia-ml-py==12.555.43
 oauth2==1.9.0.post1
 pillow==10.3.0
