--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -16,7 +16,7 @@ RUN apt install -y \
 RUN apt install -y \
     mesa-common-dev mesa-utils libgl1-mesa-dev libglu1-mesa-dev \
     libxxf86dga-dev libxxf86vm-dev libxrender-dev libxext-dev libgtk2.0-dev \
-    libxkbcommon-x11-dev libgbm-dev libwayland-dev
+    libxkbcommon-x11-dev libdecor-0-dev libgbm-dev libwayland-dev libxcb-xinput-dev
 RUN apt clean && \
     ln -sf /usr/share/zoneinfo/UTC /etc/localtime && \
     echo UTC > /etc/timezone && \
