--- a/sdk/requirements.txt
+++ b/sdk/requirements.txt
@@ -1,4 +1,3 @@
-cryptography==43.0.0
 cython==3.0.10
 httplib2==0.20.2
 jinja2==3.1.4
@@ -8,4 +7,5 @@ nvidia-ml-py==12.555.43
 oauth2==1.9.0.post1
 pillow==10.4.0
 py-ubjson==0.16.1
+pycryptodome==3.20.0
 git+https://github.com/Moguri/panda3d-gltf.git@948d0e9fa16423ccbd902b904b9139d1f825a0fb
